fix post not display issue when image is empty add translate logic for post viewer page fix find page mini text margin issue fix ru find loc text too long issue

--- a/Reddah.Ionic5/src/app/tab2/tab2.page.scss
+++ b/Reddah.Ionic5/src/app/tab2/tab2.page.scss
@@ -41,7 +41,7 @@
 }
 
 .mini-box-label{
-    padding:0 5px;
+    padding:0 15px;
     width: 80px;
     color:gray;
     margin-top: 5px;
